# Maxwell

./: .gitignore  CMakeLists.txt  LICENSE  README.md  notes.org
cpp/: CMakeLists.txt
cpp/bindings/: CMakeLists.txt  binding.cpp
cpp/relativity/: CMakeLists.txt
cpp/relativity/include/: Event.h  ReferenceFrame.h
cpp/relativity/src/: Event.cpp
cpp/tests/: CMakeLists.txt  test.cpp
python/: game.py  integrator.py  lorentz.py  main.py  settings.yaml  vel_add.py
source/: CMakeLists.txt
source/bindings/: CMakeLists.txt  binding.cpp
source/relativity/: CMakeLists.txt
source/relativity/include/: Event.h  body.hpp  constants.hpp  frame.hpp  integrator.hpp  point.hpp  pointworldline.hpp  rigidbody.hpp  vec.hpp  vec2.hpp  vec3.h  vec3.hpp  vel2.hpp  vel3.hpp  worldline.hpp
source/relativity/src/: Event.cpp  body.cpp  integrator.cpp  point.cpp  pointworldline.cpp  rigidbody.cpp  vec3.cpp  worldline.cpp
source/tests/: CMakeLists.txt  test.cpp
